fix scrollbar: adjust twc height/weight

--- a/static/style.css
+++ b/static/style.css
@@ -69,6 +69,11 @@ html.twc, body.twc, div.twc {
     width: 100%;
 }
 
+#myDistChart {
+    height: 96%;
+    width: 100%;
+}
+
 #myTWCChart.twc-test {
     height: 50%;
 }
